--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "## Workout Analytics\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import ssl\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -79,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2936, 441)\n",
-      "Exercise Transform Data(Tuple) Count: 2936\n"
+      "Raw Data Count(Exercises, Days): (2948, 443)\n",
+      "Exercise Transform Data(Tuple) Count: 2948\n"
      ]
     }
    ],
@@ -156,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 441\n"
+      "Exercise Days: 443\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -187,7 +187,7 @@
       "('Anold Press[Dumbbell]', 5)\n",
       "('Arnold Press[Dumbbell]', 35)\n",
       "('Assisted Dips[Machine]', 70)\n",
-      "('Assisted Pull-Up[Machine]', 101)\n",
+      "('Assisted Pull-Up[Machine]', 102)\n",
       "('Back Extension', 45)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
@@ -205,7 +205,7 @@
       "('Chest Fly[Pec Deck Machine]', 83)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 120)\n",
+      "('Deadlift[Barbell]', 121)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
@@ -240,35 +240,35 @@
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 141)\n",
+      "('Lat Pulldown[Machine]', 142)\n",
       "('Leg Extension[Machine]', 83)\n",
       "('Long Pull Row[Cable]', 106)\n",
       "('Lunge[Dumbbell]', 1)\n",
       "('Lying Leg Curls[Machine]', 148)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Military Press[Smith Machine]', 34)\n",
+      "('Military Press[Smith Machine]', 35)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('One Arm Low Row[Machine]', 1)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('One Leg Deadlift[Kettlebell]', 67)\n",
+      "('One Leg Deadlift[Kettlebell]', 69)\n",
       "('Plank', 104)\n",
       "('Power Leg Press[Machine]', 76)\n",
       "('Pull-Up', 12)\n",
       "('Push-Up', 12)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 59)\n",
-      "('Running', 116)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 60)\n",
+      "('Running', 118)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Seated Chest Press[Machine]', 102)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Seated Row[Machine]', 92)\n",
-      "('Shoulder Press[Machine]', 105)\n",
-      "('Side Lateral Raise[Dumbbell]', 97)\n",
+      "('Shoulder Press[Machine]', 106)\n",
+      "('Side Lateral Raise[Dumbbell]', 98)\n",
       "('Side Lateral Raise[Machine]', 23)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
@@ -277,7 +277,7 @@
       "('Split Squat[Smith Machine]', 20)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Straight Arm Pulldown[Cable]', 60)\n",
+      "('Straight Arm Pulldown[Cable]', 61)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
@@ -313,41 +313,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "('Lying Leg Curls[Machine]', 148)\n",
-      "('Lat Pulldown[Machine]', 141)\n",
-      "('Deadlift[Barbell]', 120)\n",
-      "('Running', 116)\n",
+      "('Lat Pulldown[Machine]', 142)\n",
+      "('Deadlift[Barbell]', 121)\n",
+      "('Running', 118)\n",
+      "('Shoulder Press[Machine]', 106)\n",
       "('Long Pull Row[Cable]', 106)\n",
-      "('Shoulder Press[Machine]', 105)\n",
       "('Plank', 104)\n",
       "('Hip Abduction[Machine]', 104)\n",
       "('Seated Chest Press[Machine]', 102)\n",
-      "('Assisted Pull-Up[Machine]', 101)\n",
-      "('Side Lateral Raise[Dumbbell]', 97)\n",
+      "('Assisted Pull-Up[Machine]', 102)\n",
+      "('Side Lateral Raise[Dumbbell]', 98)\n",
       "('Hip Adduction[Machine]', 95)\n",
       "('Seated Row[Machine]', 92)\n",
-      "('Leg Extension[Machine]', 83)\n",
       "('Chest Fly[Pec Deck Machine]', 83)\n",
+      "('Leg Extension[Machine]', 83)\n",
       "('Flat Bench Press[Barbell]', 77)\n",
       "('Power Leg Press[Machine]', 76)\n",
       "('Incline Bench Press[Machine]', 74)\n",
       "('Assisted Dips[Machine]', 70)\n",
-      "('One Leg Deadlift[Kettlebell]', 67)\n",
-      "('Straight Arm Pulldown[Cable]', 60)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 59)\n",
+      "('One Leg Deadlift[Kettlebell]', 69)\n",
+      "('Straight Arm Pulldown[Cable]', 61)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 60)\n",
       "('Back Extension', 45)\n",
       "('Dips', 42)\n",
       "('Ab Rollout[Ab Wheel]', 40)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 38)\n",
       "('Wide Pulldown Rear[Machine]', 36)\n",
+      "('Military Press[Smith Machine]', 35)\n",
       "('Arnold Press[Dumbbell]', 35)\n",
-      "('Military Press[Smith Machine]', 34)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
@@ -355,82 +355,82 @@
       "('Side Lateral Raise[Machine]', 23)\n",
       "('Wrist Roller', 22)\n",
       "('Hack Squat[Machine]', 21)\n",
-      "('Bent Over Row[Barbell]', 20)\n",
       "('Split Squat[Smith Machine]', 20)\n",
+      "('Bent Over Row[Barbell]', 20)\n",
       "('Upright Row[EZ Curl Bar]', 19)\n",
       "('Bent Over Row[Dumbbell]', 18)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
       "('Hip Bridge', 15)\n",
-      "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
+      "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Push-Up', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Deadlift[Kettlebell]', 12)\n",
+      "('Push-Up', 12)\n",
       "('Pull-Up', 12)\n",
-      "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Decline Bench Press[Barbell]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Flat Bench Press[Machine]', 8)\n",
-      "('Deadlift[Dumbbell]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
+      "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
-      "('Anold Press[Dumbbell]', 5)\n",
-      "('Hip Thrust', 5)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Body-Weight Squat', 5)\n",
+      "('Anold Press[Dumbbell]', 5)\n",
+      "('Hip Thrust', 5)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Reverse Crunch', 4)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Dead Bug', 2)\n",
       "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Full Squat[Smith Machine]', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Trx Row', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Walking', 2)\n",
       "('Full Squat[Barbell]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Trx Lunge', 1)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
+      "('Cross Lunges', 1)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n"
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Squat[Kettlebell]', 1)\n"
      ]
     }
    ],
